--- a/css/optimized.css
+++ b/css/optimized.css
@@ -302,6 +302,15 @@ header {
   margin-bottom: 0.75rem;
 }
 
+  .publication-abstract {
+  font-size: 0.95rem;
+  color: #444;
+  line-height: 1.5;
+  margin-bottom: 1rem;
+  padding-left: 1rem;
+  border-left: 3px solid #eaeaea;
+  }
+  
 .research-metrics {
   display: flex;
   flex-wrap: wrap;
@@ -741,6 +750,13 @@ header {
 }
 
 /* --- Publications Section --- */
+.section-intro {
+  font-size: 1.1rem;
+  color: #555;
+  margin-bottom: 2rem;
+  max-width: 800px;
+}
+
 .publications-list {
   margin-bottom: 2.5rem;
 }
